2001-04-04  Andy Hertzfeld  <andy@eazel.com>

	* libnautilus-extensions/nautilus-annotation.c:
	(nautilus_annotation_add_annotation):
	if there is no annotation text, delete the annotation.
	
	* libnautilus-extensions/nautilus-icon-canvas-item.c:
	(create_annotation):
	changed the annotation color/transparency to be more saturated,
	as specified by Arlo.
	
2001-04-04  Andy Hertzfeld  <andy@eazel.com>

	* libnautilus-extensions/nautilus-canvas-note-item.c:
	(update_item_bounding_box), (draw_item_aa_text),
	(nautilus_canvas_note_item_update):
	fixed the partial drawing problems in aa-mode plus
	other tweaks.
	
	* libnautilus-extensions/nautilus-icon-canvas-item.c:
	(nautilus_icon_canvas_item_initialize), (remove_annotation),
	(create_annotation_timeout_callback),
	(nautilus_icon_canvas_item_set_note_state),
	(nautilus_icon_canvas_item_event):
	made annotations appear only if you linger over the emblem
	for at least one second.
	
2001-04-03  Andy Hertzfeld  <andy@eazel.com>

	* libnautilus-extensions/nautilus-canvas-note-item.c: (get_bounds),
	(update_item_bounding_box),
	(nautilus_canvas_note_item_set_note_text),
	(nautilus_canvas_note_item_set_arg),
	(nautilus_canvas_note_item_get_arg),
	(nautilus_canvas_note_item_translate),
	(nautilus_canvas_note_item_bounds),
	(nautilus_canvas_note_item_draw),
	(nautilus_canvas_note_item_point),
	(nautilus_canvas_note_item_update):
	* libnautilus-extensions/nautilus-canvas-note-item.h:
	some more work at making the annotations show up properly, but
	there's still more to do.
	
2001-04-03  Andy Hertzfeld  <andy@eazel.com>

	* libnautilus-extensions/nautilus-global-preferences.c:
	(global_preferences_create_dialog):
	restored the annotation preferences that was inadvertently left
	out of yesterday's merge.
	
2001-04-02  Andy Hertzfeld  <andy@eazel.com>

	merged with HEAD to create the post-1_0_9 branch.
	
	The annotation preferences got disabled since the preference
	stuff changed alot; I'll fix that soon.
	
	* Makefile.am: